# QuantizedNeuralNetworks

./: README.md  pyproject.toml
qnn/optim/: optimizer.py
table/: ElogpOptimization.ipynb
