[tool.poetry]
name = "qnn"
version = "0.1.0"
description = "Doctoral Thesis"
authors = ["bogdankjastrzebski <bogdan.k.jastrzebski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.19.0"
numpy = "^1.26.2"
torch = "^2.1.2"
torchvision = "^0.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
